# tmd-earthquake-server-1.0

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  server.py
